--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,9 @@
         padding: 0;
         box-sizing: border-box;
       }
+      body {
+        max-width: 100vw;
+      }
     </style>
   </head>
   <body>
